minor fixes dark mode v3

--- a/_sass/includes/medium.scss
+++ b/_sass/includes/medium.scss
@@ -102,6 +102,7 @@
 
   .layout-footer {
     width: 100%;
+    padding-bottom: 20px;
 
     &-social {
       display: block;
