--- a/_sass/includes/small.scss
+++ b/_sass/includes/small.scss
@@ -194,6 +194,9 @@
     width: 100%;
     margin: auto;
     text-align: center;
+    padding-bottom: 15px;
+
+
     &-social {
       display: block;
       font-size: 1.4rem;
