--- a/_sass/root/dark-mode-toggle.scss
+++ b/_sass/root/dark-mode-toggle.scss
@@ -51,6 +51,10 @@ input:checked+.slider {
   background-size: 12px;
   background-position-x: 4px;
   background-position-y: 4px;
+  -webkit-transition: opacity 1s linear;
+  -moz-transition: opacity 1s linear;
+  -o-transition: opacity 1s linear;
+  transition: opacity 1s linear;
 
 }
 
@@ -65,6 +69,11 @@ input:checked+.slider:before {
   background-size: 14px;
   background-position-x: 23px;
   background-position-y: 4px;
+
+  -webkit-transition: opacity 1s linear;
+  -moz-transition: opacity 1s linear;
+  -o-transition: opacity 1s linear;
+  transition: opacity 1s linear;
   
 }
 
